Category model api added (not final)
