# routes/expenses.js
@@ -8,6 +8,5 @@ router.put('/:id', expensesController.updateExpense);
 router.delete('/:id', expensesController.deleteExpense);
 router.get('/statistics', expensesController.getStatistics);
 router.get('/export', expensesController.exportExpenses);
-router.post('/categories', expensesController.createCategory); // Новий маршрут
 
 module.exports = router;
